--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <svg class="minus-icon" viewBox="0 0 12 12"><rect y="4.5" width="12" height="3"/></svg>
                   <span class="visually-hidden">Минус один взрослый</span>
                 </button>
-                <input class="input-popup-adult" type="text" name="adult" id="adult" value="2">
+                <input class="input-popup-common input-popup-adult" type="text" name="adult" id="adult" value="2">
                 <button class="plus" type="button">
                   <svg class="plus-icon" viewBox="0 0 12 12"><polygon points="12 4.5 7.5 4.5 7.5 0 4.5 0 4.5 4.5 0 4.5 0 7.5 4.5 7.5 4.5 12 7.5 12 7.5 7.5 12 7.5 12 4.5"/></svg>
                   <span class="visually-hidden">Плюс один взрослый</span>
@@ -124,7 +124,7 @@
                     <svg class="minus-icon" viewBox="0 0 12 12"><rect y="4.5" width="12" height="3"/></svg>
                   <span class="visually-hidden">Минус один ребёнок</span>
                 </button>
-                <input class="input-popup-child" type="text" name="child" id="child" value="0">
+                <input class="input-popup-common input-popup-child" type="text" name="child" id="child" value="0">
                 <button class="plus" type="button">
                     <svg class="plus-icon" viewBox="0 0 12 12"><polygon points="12 4.5 7.5 4.5 7.5 0 4.5 0 4.5 4.5 0 4.5 0 7.5 4.5 7.5 4.5 12 7.5 12 7.5 7.5 12 7.5 12 4.5"/></svg>
                   <span class="visually-hidden">Плюс один ребёнок</span>
